--- a/Tema3-VisorImagenes/Tema3-VisorImagenes.csproj
+++ b/Tema3-VisorImagenes/Tema3-VisorImagenes.csproj
@@ -3,14 +3,22 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>Tema3_Mosaico</RootNamespace>
+    <RootNamespace>Tema3_VisorImagenes</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>Resources\mosaico.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\imagen.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Resources\mosaico.ico" />
+    <None Remove="Resources\episodioIV.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\imagen.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\episodioIV.jpg" />
   </ItemGroup>
 
   <ItemGroup>
